# rules_soci

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md
docs/: BUILD.bazel  image.md  push.md  rules.md
examples/buildx/: BUILD.bazel  Dockerfile  MODULE.bazel
examples/buildx/src/: main.py
examples/simple/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-simple  bazel-testlogs
soci/: BUILD.bazel  defs.bzl  extensions.bzl  versions.bzl
soci/private/: BUILD.bazel  image.bzl  push.bzl  repositories.bzl  toolchain.bzl
