load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "image_gen",
    out = "image_gen.md",
    input = "//soci/private:image.bzl",
    deps = [
        "//soci/private:image",
    ],
)

diff_test(
    name = "image",
    failure_message = "Please run: bazel run //docs:update",
    file1 = "image_gen.md",
    file2 = "image.md",
)

stardoc(
    name = "push_gen",
    out = "push_gen.md",
    input = "//soci/private:push.bzl",
    deps = [
        "//soci/private:image",
        "//soci/private:push",
    ],
)

diff_test(
    name = "push",
    failure_message = "Please run: bazel run //docs:update",
    file1 = "push_gen.md",
    file2 = "push.md",
)

write_file(
    name = "update_script",
    out = "update.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd \"$BUILD_WORKSPACE_DIRECTORY\"",
        "cp -fv bazel-bin/docs/image_gen.md docs/image.md",
        "cp -fv bazel-bin/docs/push_gen.md docs/push.md",
    ],
    is_executable = True,
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":image_gen",
        ":push_gen",
    ],
)
