load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

# --- image ---

stardoc(
    name = "image_gen",
    out = "image_gen.md",
    input = "//soci/private:image.bzl",
    # Chỉ để các bzl_library thực sự cần cho tài liệu hoá
    deps = [
        "//soci/private:image",
    ],
)

diff_test(
    name = "image",
    failure_message = "Please run: bazel run //docs:update",
    file1 = "image_gen.md",
    file2 = "image.md",
)

# --- push ---

stardoc(
    name = "push_gen",
    out = "push_gen.md",
    input = "//soci/private:push.bzl",
    deps = [
        "//soci/private:push",
        # Thêm image nếu push.bzl có load("//soci/private:image.bzl", ...)
        "//soci/private:image",
    ],
)

diff_test(
    name = "push",
    failure_message = "Please run: bazel run //docs:update",
    file1 = "push_gen.md",
    file2 = "push.md",
)

# --- Update script: copy generated docs về source ---

write_file(
    name = "update_script",
    out = "update.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd \"$BUILD_WORKSPACE_DIRECTORY\"",
        "cp -fv bazel-bin/docs/image_gen.md docs/image.md",
        "cp -fv bazel-bin/docs/push_gen.md docs/push.md",
    ],
    is_executable = True,
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":image_gen",
        ":push_gen",
    ],
)
