load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@aspect_rules_buildx//buildx:defs.bzl", "buildx_build", "buildx_context_local", "buildx_context_oci_layout")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_soci//soci:defs.bzl", "soci_image", "soci_push")

buildx_context_oci_layout(
    name = "python_context",
    layout = "@python_3_14_6-trixie",
)

buildx_context_oci_layout(
    name = "python_context_amd64",
    layout = "@python_3_14_6-trixie_linux_amd64",
)

buildx_context_oci_layout(
    name = "python_context_arm64",
    layout = "@python_3_14_6-trixie_linux_arm64_v8",
)


buildx_context_local(
    name = "root_context",
    srcs = glob(["src/*"]),
)

buildx_build(
    name = "buildx_image",
    srcs = [],
    build_context = {
        "python:3.14.6-trixie-amd64": ":python_context_amd64",
        "python:3.14.6-trixie-arm64": ":python_context_arm64",
        "root":":root_context"
    },
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    dockerfile = ":Dockerfile",
    path = ".",
)

soci_image(
    name = "buildx_soci_image",
    image = ":buildx_image",
    repo_tags = [
        "docker.io/minhducle/buildx_soci:latest",
        "docker.io/minhducle/buildx_soci:1.0.0",
    ],
)

soci_push(
    name = "buildx_soci_push",
    soci_image = ":buildx_soci_image",
)
