module(name = "buildx")

bazel_dep(name = "rules_soci", version = "0.1.0")
local_path_override(
    module_name = "rules_soci",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_rules_buildx", version = "0.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")

git_override(
    module_name = "aspect_rules_buildx",
    remote = "https://github.com/aspect-build/rules_buildx.git",
    tag = "v0.0.1",
)

soci = use_extension("@rules_soci//soci:extensions.bzl", "soci")
soci.toolchain(soci_version = "0.12.1")
use_repo(soci, "soci_toolchains")

register_toolchains("@soci_toolchains//:all")

# Fetch the base image to be used for the build.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python_3_11_9-bullseye",
    digest = "sha256:64da8e5fd98057b05db01b49289b774e9fa3b81e87b4883079f6c31fb141b252",
    image = "python:3.11.9-bullseye",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "python_3_11_9-bullseye", "python_3_11_9-bullseye_linux_amd64", "python_3_11_9-bullseye_linux_arm64_v8")
