module(
    name = "soci_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_soci", version = "0.1.0")
local_path_override(
    module_name = "rules_soci",
    path = "../..",
)

bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.44.0")  # add rules_go to build the Go app

soci = use_extension("@rules_soci//soci:extensions.bzl", "soci")
soci.toolchain(soci_version = "0.12.1")
use_repo(soci, "soci_toolchains")

register_toolchains("@soci_toolchains//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_base",
    image = "ubuntu:24.04",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "ubuntu_base")
