module(
    name = "soci_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_soci", version = "0.1.0")
local_path_override(
    module_name = "rules_soci",
    path = "../..",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_go", version = "0.61.1")  # add rules_go to build the Go app

soci = use_extension("@rules_soci//soci:extensions.bzl", "soci")
soci.toolchain(soci_version = "0.14.1")
soci.crane_toolchain(crane_version = "0.21.7")

use_repo(
    soci,
    "soci_toolchains",
    "crane_linux_amd64",
    "crane_linux_arm64",
    "crane_darwin_amd64",
    "crane_darwin_arm64",
)

register_toolchains("@soci_toolchains//:all")
register_toolchains(
    "@crane_linux_amd64//:crane_toolchain",
    "@crane_linux_arm64//:crane_toolchain",
    "@crane_darwin_amd64//:crane_toolchain",
    "@crane_darwin_arm64//:crane_toolchain",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_base",
    image = "ubuntu:24.04",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "ubuntu_base", "ubuntu_base_linux_amd64", "ubuntu_base_linux_arm64")
