load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//soci:__subpackages__"],
)

bzl_library(
    name = "image",
    srcs = ["image.bzl"],
    visibility = ["//soci:__subpackages__"],
    deps = [":toolchain"],
)

bzl_library(
    name = "push",
    srcs = ["push.bzl"],
    visibility = ["//soci:__subpackages__"],
    deps = [":toolchain"],
)

exports_files([
    "toolchain.bzl",
    "image.bzl",
    "push.bzl",
])
