load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//soci:__subpackages__"],
)

bzl_library(
    name = "image",
    srcs = ["image.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//soci:__subpackages__",
    ],
    deps = [":toolchain"],
)

bzl_library(
    name = "push",
    srcs = ["push.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//soci:__subpackages__",
    ],
    deps = [
        ":toolchain",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//soci:versions"],
)

exports_files([
    "toolchain.bzl",
    "image.bzl",
    "push.bzl",
    "repositories.bzl",
])
